--- a/package.json
+++ b/package.json
@@ -25,13 +25,10 @@
     "@angular-devkit/build-angular": "^18.0.1",
     "@angular/cli": "^18.0.0",
     "@angular/compiler-cli": "^18.0.0",
+    "@onehoax/eslint_angular": "1.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^16.11.35",
-    "angular-eslint": "18.4.0",
     "copyfiles": "^2.4.1",
-    "eslint": "9.13.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-unused-imports": "^4.1.4",
     "jasmine-core": "~5.3.0",
     "jasmine-marbles": "~0.9.2",
     "jasmine-spec-reporter": "~7.0.0",
@@ -43,7 +40,6 @@
     "prettier": "3.3.3",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.0",
-    "typescript": "~5.5.0",
-    "typescript-eslint": "8.10.0"
+    "typescript": "~5.5.0"
   }
 }
