--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "lint": "eslint .",
-    "format": ""
+    "format:check": "prettier -c './src/**/*.ts' './test/**/*.ts'",
+    "format:write": "prettier -w './src/**/*.ts' './test/**/*.ts'"
   },
   "private": true,
   "dependencies": {
